--- a/TextAnalysis.csproj
+++ b/TextAnalysis.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextAnalysis.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
